// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`dashboard golden frames renders many-projects at 80x24 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited 
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-overlay                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  3 sessions · 2 agents                                  [sh] [qs] [▾] 
 [9] ○ api-cache                          opencode  idle           +14 -6 #5 x1 
 [a] ? metadata-refresh                   opencode  unknown           +3 -1 #10 
 [b] - old-experiment                     -         no agent                    
                                                                                
↓ 2 hidden                                                                      
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:delete session /:search H:help 
"
`;

exports[`dashboard golden frames renders many-projects at 120x40 1`] = `
"station                                                                                                                 
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited                                         
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
                                                                                                                        
▼ station  5 sessions · 4 agents                                                            [shell] [quick session] [▾] 
 [1] ○ cli-help-man                              codex     idle                                            +14 -6 #70 ✓ 
 [2] - docs-cleanup                              -         no agent                                                     
 [3] ○ pty-buffer                                codex     idle                                                   #73 ✓ 
 [4] + session-resume                            codex     starting                                                     
 [5] ⠋ station-overlay                           codex     working                                       +412 -96 #76 … 
                                                                                                                        
▼ observer  3 sessions · 3 agents                                                           [shell] [quick session] [▾] 
 [6] x batch-export                              opencode  exited                                                  #8 ✓ 
 [7] ⠋ provider-hooks                            opencode  working                                         +32 -8 #16 … 
 [8] ○ trace-bundle                              opencode  idle                                              +1 -1 #4 ✓ 
                                                                                                                        
▼ scripts  3 sessions · 2 agents                                                            [shell] [quick session] [▾] 
 [9] ○ api-cache                                 opencode  idle                                            +14 -6 #5 x1 
 [a] ? metadata-refresh                          opencode  unknown                                            +3 -1 #10 
 [b] - old-experiment                            -         no agent                                                     
                                                                                                                        
▼ empty-project  0 sessions                                                                 [shell] [quick session] [▾] 
 no sessions yet · press A to add one                                                                                   
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
N:new A:add R:rename F:fork Z:refresh 1-9/a-z:open X:delete session /:search C:fold P:settings H:help Q/esc:close       
"
`;

exports[`dashboard golden frames renders many-projects at 60x16 1`] = `
"station                                                     
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ?   
─────────────────────────────────────────────────────────── 
                                                            
▼ station  5 sessions · 4 agents              [sh] [qs] [▾] 
 [1] ○ cli-help-man            codex     idle         #70 ✓ 
 [2] - docs-cleanup            -         no agent           
 [3] ○ pty-buffer              codex     idle         #73 ✓ 
 [4] + session-resume          codex     starting           
 [5] ⠋ station-overlay         codex     working      #76 … 
                                                            
▼ observer  3 sessions · 3 agents             [sh] [qs] [▾] 
 [6] x batch-export            opencode  exited        #8 ✓ 
↓ 10 hidden                                                 
─────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:delete se… 
"
`;

exports[`dashboard golden frames renders many-projects at 40x12 1`] = `
"station                                 
FLEET  ● 0 ready  ⠿ 2 working  ! 0      
─────────────────────────────────────── 
                                        
▼ station  5 sessions · … [sh] [qs] [▾] 
 [1] ○ cli-help-man        idle         
 [2] - docs-cleanup        no agent     
 [3] ○ pty-buffer          idle         
 [4] + session-resume      starting     
↓ 14 hidden                             
─────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/… 
"
`;

exports[`dashboard golden frames renders attention-and-failures at 80x24 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 1 working  ! 3 needs you  ○ 0 idle  ? 1 unknown  x 1 exited 
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station  4 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ! hook-scope                     codex     Agent needs appro… +8 -2 #12 x2 
 [2] ? metadata-refresh               codex     unknown                   +3 -1 
 [3] ! popup-latency                  codex     No progress was… +120 -44 #13 … 
 [4] ⠋ pr-info                        codex     working                   #11 ✓ 
                                                                                
▼ observer  2 sessions · 2 agents                                 [sh] [qs] [▾] 
 [5] x done-run                       opencode  exited                          
 [6] ! sqlite-cleanup                 opencode  Agent needs appro… +19 -2 #6 x1 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:delete session /:search H:help 
"
`;

exports[`dashboard golden frames renders attention-and-failures at 120x40 1`] = `
"station                                                                                                                 
FLEET  ● 0 ready  ⠿ 1 working  ! 3 needs you  ○ 0 idle  ? 1 unknown  x 1 exited                                         
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
                                                                                                                        
▼ station  4 sessions · 4 agents                                                            [shell] [quick session] [▾] 
 [1] ! hook-scope                                codex     Agent needs approval.                           +8 -2 #12 x2 
 [2] ? metadata-refresh                          codex     unknown                                                +3 -1 
 [3] ! popup-latency                             codex     No progress was observed recently.            +120 -44 #13 … 
 [4] ⠋ pr-info                                   codex     working                                                #11 ✓ 
                                                                                                                        
▼ observer  2 sessions · 2 agents                                                           [shell] [quick session] [▾] 
 [5] x done-run                                  opencode  exited                                                       
 [6] ! sqlite-cleanup                            opencode  Agent needs approval.                           +19 -2 #6 x1 
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
N:new A:add R:rename F:fork Z:refresh 1-9/a-z:open X:delete session /:search C:fold P:settings H:help Q/esc:close       
"
`;

exports[`dashboard golden frames renders attention-and-failures at 60x16 1`] = `
"station                                                     
FLEET  ● 0 ready  ⠿ 1 working  ! 3 needs you  ○ 0 idle  ?   
─────────────────────────────────────────────────────────── 
                                                            
▼ station  4 sessions · 4 agents              [sh] [qs] [▾] 
 [1] ! hook-scope         codex     Agent needs app… #12 x2 
 [2] ? metadata-refresh   codex     unknown                 
 [3] ! popup-latency      codex     No progress was … #13 … 
 [4] ⠋ pr-info            codex     working           #11 ✓ 
                                                            
▼ observer  2 sessions · 2 agents             [sh] [qs] [▾] 
 [5] x done-run           opencode  exited                  
 [6] ! sqlite-cleanup     opencode  Agent needs appr… #6 x1 
                                                            
─────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:delete se… 
"
`;

exports[`dashboard golden frames renders attention-and-failures at 40x12 1`] = `
"station                                 
FLEET  ● 0 ready  ⠿ 1 working  ! 3      
─────────────────────────────────────── 
                                        
▼ station  4 sessions · … [sh] [qs] [▾] 
 [1] ! hook-scope                       
 [2] ? metadata-refresh                 
 [3] ! popup-latency                    
 [4] ⠋ pr-info                          
↓ 4 hidden                              
─────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/… 
"
`;

exports[`dashboard golden frames renders no-projects at 80x24 1`] = `
"station                                                                         
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
No projects configured yet.                                                     
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
A:Add Project Q/esc:close                                                       
"
`;

exports[`dashboard golden frames renders no-projects at 120x40 1`] = `
"station                                                                                                                 
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
                                                                                                                        
No projects configured yet.                                                                                             
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
A:Add Project Q/esc:close                                                                                               
"
`;

exports[`dashboard golden frames renders no-projects at 60x16 1`] = `
"station                                                     
─────────────────────────────────────────────────────────── 
                                                            
No projects configured yet.                                 
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
─────────────────────────────────────────────────────────── 
A:Add Project Q/esc:close                                   
"
`;

exports[`dashboard golden frames renders no-projects at 40x12 1`] = `
"station                                 
─────────────────────────────────────── 
                                        
No projects configured yet.             
                                        
                                        
                                        
                                        
                                        
                                        
─────────────────────────────────────── 
A:Add Project Q/esc:close               
"
`;
